added what ive learnt from the tutorial as headings and paragraph

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Learning git</h1>
     <p>this is gonna be part of my second commit</p>
+    <h3>git add</h3>
+    <p>add files to standing</p>
+    <h3>git status</h3>
+    <p>check files waiting for next commit</p>
+    <h3>git commit -m "message"</h3>
+    <p>commit the file</p>
 </body>
 </html>
