--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
     <p>check files waiting for next commit</p>
     <h3>git commit -m "message"</h3>
     <p>commit the file</p>
+    <h3>git log</h3>
+    <p>check previous commits (--oneline for shorter oneline logs)</p>
+    <h3>git checkout "code" or master</h3>
+    <p>can move back and forth to checkout previous code</p>
+    <h3>git revert revert "code"</h3>
+    <p>you just moved back to the old code</p>
+    <h3>git revert "code" -hard</h3>
+    <p>you just reverted to old code forever dawg</p>
 </body>
 </html>
