fixed some lines and added feature h3's

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     <p>commit the file</p>
     <h3>git log</h3>
     <p>check previous commits (--oneline for shorter oneline logs)</p>
-    <h3>git checkout "code" or master</h3>
+    <h3>git checkout "code" or branch name</h3>
     <p>can move back and forth to checkout previous code</p>
     <h3>git revert revert "code"</h3>
     <p>you just moved back to the old code</p>
     <h3>git revert "code" -hard</h3>
     <p>you just reverted to old code forever dawg</p>
+    <h3>git branch " name of branch"</h3>
+    <p>creates a new branch</p>
+    <h3>git branch -a</h3>
+    <p>list all branches</p>
+    <h3>git branch -d "branch name"</h3>
+    <p>deltes the branch</p>
 </body>
 </html>
