more branching features added

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <p>list all branches</p>
     <h3>git branch -d "branch name"</h3>
     <p>deltes the branch</p>
+    <h3>git checkout -b "branch name"</h3>
+    <p>Creates and moves into new branch</p>
 </body>
 </html>
