added margin to body

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Learning git</h1>
     <p>this is gonna be part of my second commit</p>
     <h3>git add</h3>
-    <p>add files to standing</p>
+    <p>add files to staging area</p>
     <h3>git status</h3>
     <p>check files waiting for next commit</p>
     <h3>git commit -m "message"</h3>
