--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     <p>Creates and moves into new branch</p>
     <h3>git merge "branch name"</h3>
     <p>meging a branch ( to be called from branch to be merged into)</p>
+    <h3>git push "github link"</h3>
+    <p>pushes it??</p>
 </body>
 </html>
