--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>meging a branch ( to be called from branch to be merged into)</p>
     <h3>git push "github link" "branch name"</h3>
     <p>pushes it??</p>
-    <h3>git remote add orgin "github link</h3>
+    <h3>git remote add orgin "github link"</h3>
     <p>adds alias to the link</p>
     <h3>git pull "orgin" "branch name"</h3>
     <p>updates changes from github</p>
