added some markdown

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>check previous commits (--oneline for shorter oneline logs)</p>
     <h3>git checkout "code" or branch name</h3>
     <p>can move back and forth to checkout previous code</p>
-    <h3>git revert revert "code"</h3>
+    <h3>git revert "code"</h3>
     <p>you just moved back to the old code</p>
     <h3>git revert "code" -hard</h3>
     <p>you just reverted to old code forever dawg</p>
